--- a/web_dev/creatify/creatify_app/templates/creatify_app/victoria.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/victoria.html
@@ -52,7 +52,7 @@ Choose to either enable this feature on your custom playlist or disable and it w
      <!-- New Toggle Button -->
      <div class = "center">
      <label class="switch">
-        <input type="checkbox"  id="{{slider.name}}">
+        <input type="checkbox" checked id="{{slider.name}}">
         <span class="toggle-slider"></span>
         <span class="toggle-text on">ENABLED</span>
         <span class="toggle-text off">DISABLED</span>
