--- a/web_dev/creatify/creatify_app/templates/creatify_app/login.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/login.html
@@ -4,13 +4,28 @@
 {% block styles %}
   {% csrf_token %}
   {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'creatify_app/main_page.css' %}">
-  {% endblock %}
+  <link rel="shortcut icon" type="image/x-icon" href="{% static 'creatify_app/favicon.ico' %}">
+  <link rel="stylesheet" href="{% static 'creatify_app/login_page.css' %}">
+{% endblock %}
 
 {% block content %}
+  <div class="intro">
+    <h1>Welcome to Creatify</h1>
+    <h2>Recommend Less. Discover More.</h2>
+    <br>
+    <br>
+    <br>
+    <button id="login-button" class="big-btn">Log in with Spotify</button>
+    <div class="notes-container">
+      <div class="note note1"></div>
+      <div class="note note2"></div>
+      <div class="note note3"></div>
+      <div class="note note4"></div>
+    </div>
+  </div> 
 
 
-
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="{% static 'creatify_app/main_page.js' %}"></script>
+  <script src="script.js"></script>
+  <script src="{% static 'creatify_app/login_page.js' %}"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 {% endblock %}
