--- a/web_dev/creatify/creatify_app/templates/creatify_app/login.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/login.html
@@ -15,7 +15,7 @@
     <br>
     <br>
     <br>
-    <button id="login-button" class="big-btn">Log in with Spotify</button>
+    <a id="login-button" class="big-btn" href="{% url 'creatify_app:auth' %}">Log in with Spotify</a>
     <div class="notes-container">
       <div class="note note1"></div>
       <div class="note note2"></div>
@@ -25,7 +25,6 @@
   </div> 
 
 
-  <script src="script.js"></script>
   <script src="{% static 'creatify_app/login_page.js' %}"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 {% endblock %}
