--- a/web_dev/creatify/creatify_app/templates/creatify_app/results.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/results.html
@@ -27,7 +27,9 @@
             <li>name 1</li>
         </ul>
     </div>
-    <div class="right"></div>
+    <div class="right">
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6H4N8Nw1UHrwBwfw9UGFRn?utm_source=generator" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
   </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="{% static 'creatify_app/results.js' %}"></script>
