fixed showbanner if

--- a/web_dev/creatify/creatify_app/templates/creatify_app/base.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/base.html
@@ -26,7 +26,7 @@
       {% block content %}
       {% endblock %}
     </main>
-    {% if showheader %}
+    {% if showbanner %}
     <div class='bottom'>
       <a href="mailto:o.a.reinhart@wustl.edu"> 
         <img src="{% static 'creatify_app/mail_icon.png'%}" alt = "mail icon" class="icon">
