--- a/web_dev/creatify/creatify_app/static/creatify_app/login_page.css
+++ b/web_dev/creatify/creatify_app/static/creatify_app/login_page.css
@@ -12,7 +12,8 @@
   }
 
 .intro {
-	height: 100vh;
+	height: 100%;
+	margin-top: 350px;
 	background-size: cover;
 	display: flex;
 	font-family: Secondary;
@@ -50,7 +51,7 @@ h2 {
 	animation: float 4s ease-in-out infinite;
 	}
 	
-	.note1 {
+	/* .note1 {
 	top: 50%;
 	left: 10%;
 	animation-duration: 5s;
@@ -71,7 +72,7 @@ h2 {
 	top: 40%;
 	left: 80%;
 	animation-duration: 5.5s;
-	}
+	} */
 	
 	@keyframes float {
 	0% {
