--- a/web_dev/creatify/creatify_app/templates/creatify_app/login.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/login.html
@@ -17,10 +17,9 @@
     <br>
     <a id="login-button" class="big-btn" href="{% url 'creatify_app:auth' %}">Log in with Spotify</a>
     <div class="notes-container">
-      <div class="note note1"></div>
-      <div class="note note2"></div>
-      <div class="note note3"></div>
-      <div class="note note4"></div>
+      {% for i in '12345678' %}
+        <div class="note note{{ i }}"></div>
+      {% endfor %}
     </div>
   </div> 
 
