--- a/web_dev/creatify/creatify_app/static/creatify_app/main_page.css
+++ b/web_dev/creatify/creatify_app/static/creatify_app/main_page.css
@@ -821,3 +821,139 @@ input:not(:placeholder-shown) ~ .reset {
   width: 17px;
   margin-top: 3px;
 }
+
+/* CSS for number button */
+.input-container {
+  margin-left: 15px;
+  --c-text: rgb(50, 50, 80);
+  --c-bg: rgb(252, 252, 252);
+  --c-outline: #204931;
+  display: grid;
+  gap: 1ch;
+  position: relative;
+  max-width: 190px;
+  font-family: Montserrat;
+}
+
+.input-field {
+  padding: 0.5em 0.75em;
+  border-radius: 0.2em;
+  border: 1px solid var(--c-border, currentColor);
+  color: var(--c-text);
+  font-size: 1rem;
+  letter-spacing: 0.1ch;
+  width: 100%;
+}
+
+.input-field:not(:placeholder-shown) + .input-label {
+  transform: translateY(-220%);
+  opacity: 1;
+}
+
+.input-field:invalid {
+  --c-border: rgb(230, 85, 60);
+  --c-text: rgb(230, 85, 60);
+  --c-outline: rgb(230, 85, 60);
+}
+
+.input-field:is(:disabled, :read-only) {
+  --c-border: rgb(150, 150, 150);
+  --c-text: rgb(170, 170, 170);
+}
+
+.input-field:is(:focus, :focus-visible) {
+  outline: 2px solid var(--c-outline);
+  outline-offset: 2px;
+}
+
+.input-label {
+  --timing: 200ms ease-in;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transition: transform var(--timing),
+    opacity var(--timing);
+  transform: translateY(-50%);
+  opacity: 0;
+  color: var(--c-text);
+  font-weight: 500;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .input-label {
+    --timing: linear;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .input-container {
+    --c-text: rgb(252, 252, 252);
+    --c-bg: transparent;
+  }
+}
+
+/* LOADING */
+  #loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #a0ca68;
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .loader {
+    width: 100px;
+    height: 46px;
+    position: relative;
+    border-bottom: 5px solid #204931;
+    border-top: 5px solid #204931;
+    box-sizing: border-box;
+  }
+  
+  .loader:before , .loader:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: -20px;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background: #16815f;
+    border: 5px solid #204931;
+    box-sizing: border-box;
+    animation: slide_391 1s infinite ease-in-out alternate;
+  }
+  
+  .loader:after {
+    top: 20px;
+    animation-direction: alternate-reverse;
+  }
+  .loading-text {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Secondary;
+    color: white;
+    text-shadow: 2px 2px #204931;
+    user-select: none;
+    margin-block-end: 0px;
+    font-size: 30px;
+    text-align: center;
+  }
+  
+  @keyframes slide_391 {
+    0% , 20% {
+      transform: translateX(70px)
+    }
+  
+    80% , 100% {
+      transform: translateX(-1px)
+    }
+  }
+    
