--- a/web_dev/creatify/creatify_app/templates/creatify_app/results.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/results.html
@@ -1,5 +1,5 @@
 {% extends 'creatify_app/base.html' %}
-{% block title %}Your Playlist{% endblock %}
+{% block title %}Creatify - Your Playlist{% endblock %}
 
 {% block styles %}
   {% load static %}
