--- a/web_dev/creatify/creatify_app/templates/creatify_app/results.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/results.html
@@ -40,13 +40,12 @@
         <h2>We thought of some other killer names...</h2>
         <h3>Click on one of them to change it</h3>
         <!-- TODO: make this into a for loop like above-->
-          <button onclick = "toggleButtonClass(this)" class = "button_active">Guided by Angles</button><br>
-          <button onclick = "toggleButtonClass(this)">Guided by Angles</button><br>
-          <button onclick = "toggleButtonClass(this)">Guided by Angles</button><br>
-          <button onclick = "toggleButtonClass(this)">Guided by Angles</button>
+        {% for title in playlist_titles%} 
+          <button onclick = "toggleButtonClass(this)" class = "button_active">{{title}}</button><br>
+        {% endfor %}
     </div>
     <div class="playlist">
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6H4N8Nw1UHrwBwfw9UGFRn?utm_source=generator&theme=0" width="100%" height="100%" frameBorder="20px" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/{{playlist_id}}?utm_source=generator&theme=0" width="100%" height="100%" frameBorder="20px" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
   </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
