--- a/web_dev/creatify/creatify_app/templates/creatify_app/victoria.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/victoria.html
@@ -56,7 +56,7 @@
   
   <br>
 <button id="new-btn" class="cta">
-    <span>Collapse unused genres</span>
+    <span>Collapse Unused Genres</span>
     <svg viewBox="0 0 10 13" height="20px" width="10px">
     <path d="M5,1 L5,20"></path>
     <polyline points="1 12 5 1 9 12"></polyline>
