favicon and mailto fixes

--- a/web_dev/creatify/creatify_app/templates/creatify_app/base.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/base.html
@@ -28,7 +28,7 @@
     </main>
     {% if showbanner %}
     <div class='bottom'>
-      <a href="mailto:o.a.reinhart@wustl.edu"> 
+      <a href="mailto:createify.site@gmail.com"> 
         <img src="{% static 'creatify_app/mail_icon.png'%}" alt = "mail icon" class="icon">
       </a> 
       <a href="https://github.com/victoriab027/Creatify"> 
