--- a/web_dev/creatify/creatify_app/templates/creatify_app/victoria.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/victoria.html
@@ -120,6 +120,22 @@ Your highest and lowest recent song of each feature are linked below</h5>
   <label for="goal" class="input-label"></label>
 </p>
 
+<h2>4. Songs Not in English</h2>
+<h5>Sometimes spotify suggests songs that are not in English. We default to including these but if you would like to 
+  turn that of, click disable.
+</h5>
+<div class = "langage_toggle">
+  <label class="switch">
+    <input type="checkbox" checked id="langeage">
+    <span class="toggle-slider"></span>
+    <span class="toggle-text on">ENABLED</span>
+    <span class="toggle-text off">DISABLED</span>
+  </label>
+</div>
+<br>
+<br>
+<br>
+
 <div class = "center">
   <button id = "iloveowen" class="learn-more">
     <span class="circle" aria-hidden="true">
