blocked other than 3 genres and no slider submission

--- a/web_dev/creatify/creatify_app/templates/creatify_app/victoria.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/victoria.html
@@ -77,7 +77,7 @@ Your highest and lowest recent song of each feature are linked below</h5>
         <div class="slider-description" id="desc-{{slider.Name}}">{{slider.desc}}
         </div>
         <label class="switch">
-          <input type="checkbox" checked id="{{slider.Name}}">
+          <input type="checkbox" checked class="custom-checkbox" id="{{slider.Name}}">
           <span class="toggle-slider"></span>
           <span class="toggle-text on">ENABLED</span>
           <span class="toggle-text off">DISABLED</span>
